added Register and Login commands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,7 @@ api-version: '1.18'
 commands:
   hello:
     description: simple hello command
+  register:
+    description: register command
+  login:
+    description: login command
